# mold

./: Cargo.toml  README.md  install.sh
src/: lib.rs  main.rs  parser.rs
