[package]
name = "mold"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
repository = "https://github.com/vv9k/mold"

[lib]
name = "mold"
path = "./src/lib.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1"
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
nom = "7"
similar = { version = "2.1", features = ["inline"] }
colored = "2"
shellexpand = "2"
